Added label to the lookups

--- a/src/AdminWeb/src/app/components/lookups/channel-lookup/channel-lookup.component.html
+++ b/src/AdminWeb/src/app/components/lookups/channel-lookup/channel-lookup.component.html
@@ -1,4 +1,6 @@
 @if (channelLookupSource$ | withLoading | async; as lookup) {
+  <label cLabel>{{ label() ?? "Kanál" }}</label>
+
   <ng-select
     ngSelector
     [loading]="lookup.loading"
