--- a/src/AdminWeb/src/app/components/lookups/guild-lookup/guild-lookup.component.html
+++ b/src/AdminWeb/src/app/components/lookups/guild-lookup/guild-lookup.component.html
@@ -1,4 +1,6 @@
 @if (guildLookupSource$ | withLoading | async; as lookup) {
+  <label cLabel>{{ label() ?? "Server" }}</label>
+
   <ng-select
     ngSelector
     [loading]="lookup.loading"
