--- a/src/AdminWeb/src/app/components/lookups/supported-emotes-lookup/supported-emotes-lookup.component.html
+++ b/src/AdminWeb/src/app/components/lookups/supported-emotes-lookup/supported-emotes-lookup.component.html
@@ -1,4 +1,6 @@
 @if (emotesLookup$() | withLoading | async; as lookup) {
+  <label cLabel>{{ label() ?? "Emote" }}</label>
+
   <ng-select
     ngSelector
     [loading]="lookup.loading"
