--- a/src/AdminWeb/src/app/components/lookups/user-lookup/user-lookup.component.html
+++ b/src/AdminWeb/src/app/components/lookups/user-lookup/user-lookup.component.html
@@ -1,4 +1,6 @@
 @if (userLookup$ | withLoading | async; as lookup) {
+  <label cLabel>{{ label() ?? "Uživatel" }}</label>
+
   <ng-select
     ngSelector
     [loading]="lookup.loading"
